--- a/configs/qemu_riscv64_pennix_defconfig
+++ b/configs/qemu_riscv64_pennix_defconfig
@@ -15,6 +15,8 @@ BR2_TARGET_OPENSBI_PLAT="generic"
 BR2_TARGET_OPENSBI_UBOOT_PAYLOAD=y
 BR2_TARGET_OPENSBI_FW_FDT_PATH=y
 BR2_TARGET_UBOOT=y
+BR2_TARGET_UBOOT_BUILD_SYSTEM_LEGACY=y
+BR2_TARGET_UBOOT_BOARDNAME="qemu_riscv64_pennix"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 BR2_TARGET_UBOOT_NEEDS_PYLIBFDT=y
 BR2_TARGET_UBOOT_NEEDS_OPENSSL=y
